<resources>
    <string name="app_name">Financial-management-assistant</string>
    <string name="Welcome_String">Welcome to the registration screen</string>
    <string name="use_name">Username:</string>
    <string name="Enter1">Please enter your username</string>
    <string name="password">Password:</string>
    <string name="Enter2">Please enter your password</string>
    <string name="age">Age:</string>
    <string name="Enter3">Please enter your age</string>
    <string name="welcome_string2">Welcome to the login screen</string>
    <string name="details_hint">Please enter the bill details</string>
    <string name="name_hint">Please enter the bill name</string>
    <string name="number_hint">Please enter the bill money</string>
    <string name="begin_date_hint">Begin Date:yyyy-mm-dd</string>
    <string name="end_date_hint">End Date:yyyy-mm-dd</string>
    <string name="key_search_hint">Please enter a key value to search</string>
    <string name="charts_hint">Please enter the date period and click the search to get the bar chart</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
