<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:windowSoftInputMode="adjustPan"
    tools:context=".showRecordsFragment">

   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/allRecords"
       android:layout_width="413dp"
       android:layout_height="372dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.709" />

   <TextView
       android:id="@+id/total"
       android:layout_width="385dp"
       android:layout_height="49dp"
       android:layout_marginStart="42dp"
       android:layout_marginLeft="42dp"
       android:layout_marginTop="68dp"
       android:layout_marginEnd="56dp"
       android:layout_marginRight="56dp"
       android:layout_marginBottom="25dp"
       android:textColor="@android:color/black"
       app:layout_constraintBottom_toTopOf="@+id/allRecords"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.458"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/endDate" />

   <EditText
       android:id="@+id/endDate"
       android:layout_width="126dp"
       android:layout_height="44dp"
       android:layout_marginTop="12dp"
       android:ems="10"
       android:hint="@string/end_date_hint"
       android:inputType="date"
       android:textColor="@android:color/black"
       android:textSize="12sp"
       app:layout_constraintStart_toEndOf="@+id/textView11"
       app:layout_constraintTop_toBottomOf="@+id/searchKey" />

   <TextView
       android:id="@+id/textView11"
       android:layout_width="22dp"
       android:layout_height="22dp"
       android:layout_marginStart="13dp"
       android:layout_marginLeft="13dp"
       android:layout_marginTop="32dp"
       android:text="TO"
       android:textColor="@android:color/black"
       app:layout_constraintEnd_toStartOf="@+id/endDate"
       app:layout_constraintStart_toEndOf="@+id/startDate"
       app:layout_constraintTop_toBottomOf="@+id/searchKey" />

   <Button
       android:id="@+id/Search"
       android:layout_width="96dp"
       android:layout_height="37dp"
       android:layout_marginTop="24dp"
       android:text="@android:string/search_go"
       android:textColor="@android:color/black"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/keySearch" />

   <EditText
       android:id="@+id/startDate"
       android:layout_width="138dp"
       android:layout_height="44dp"
       android:layout_marginStart="4dp"
       android:layout_marginLeft="4dp"
       android:layout_marginTop="12dp"
       android:ems="10"
       android:hint="@string/begin_date_hint"
       android:inputType="date"
       android:textColor="@android:color/black"
       android:textSize="12sp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/searchKey" />

   <EditText
       android:id="@+id/searchKey"
       android:layout_width="288dp"
       android:layout_height="46dp"
       android:layout_marginStart="13dp"
       android:layout_marginLeft="13dp"
       android:layout_marginTop="11dp"
       android:layout_marginEnd="13dp"
       android:layout_marginRight="13dp"
       android:ems="10"
       android:hint="@string/key_search_hint"
       android:inputType="textPersonName"
       app:layout_constraintEnd_toStartOf="@+id/keySearch"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <Button
       android:id="@+id/keySearch"
       android:layout_width="96dp"
       android:layout_height="37dp"
       android:layout_marginTop="6dp"
       android:layout_marginEnd="1dp"
       android:layout_marginRight="1dp"
       android:text="@android:string/search_go"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>